[package]
name = "snapbug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.6", features = ["derive"] }
rayon = "1.5.1"
regex = "1.5.5"
tempfile = "3.3.0"
walkdir = "2.3.2"
